--- a/index.html
+++ b/index.html
@@ -9,40 +9,37 @@
     <title>How to Edit your Hosts File</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+    <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <link rel="stylesheet" href="assets/css/app.css">
-    <link rel="stylesheet" type="text/css" ref="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/skeleton/css/normalize.css">
+    <link rel="stylesheet" href="bower_components/skeleton/css/skeleton.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>How to Edit Your Hosts File</h1>
-        </div>
-        <div ng-controller="hostsFileViewerCtrl as hosts" class="hosts">
-            <div class="nav">
-                <!-- TOOD: Pull this from a service/list. Make linkable to set scope. ng-repeat or something similar -->
-                <div class="nav-item">
-                    Choose for me
-                </div>
-                <div class="nav-item">
-                    Mac
-                </div>
-                <div class="nav-item">
-                    Windows
-                </div>
-                <div class="nav-item">
-                    Mobile
-                </div>
-            </div>
-           <div ng-include="hosts.getPartialUrl()"></div>
+        <section class="header">
+            <h2 class="title">How to Edit Your Hosts File</h2>
+        </section>
+        <div class="content" ng-controller="hostsFileViewerCtrl as hosts" class="hosts">
+            <div class="navbar-spacer"></div>
+            
+             <div class="navbar-spacer"></div>
+            <nav class="navbar">
+              <div class="container">
+                <ul class="navbar-list">
+                  <li class="navbar-item"><a class="navbar-link" href="#intro">PC</a></li>
+                  <li class="navbar-item"><a class="navbar-link" href="#examples">Mac</a></li>
+                  <li class="navbar-item"><a class="navbar-link" href="#intro">Other</a></li>
+                </ul>
+              </div>
+            </nav>
+            <div ng-include="hosts.getPartialUrl()" class="tutorial"></div>
         </div> 
-        <div class="footer">
-            Made with love by @jchapa and @brstorrie
-        </div>
+        <!--<div class="footer">
+            <h6>Made with love by @jchapa and @brstorrie</h6>
+        </div>-->
     </div>
     
-    <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="app/app.js"></script>
     <script src="app/components/hostsFileViewer/hostsFileViewerController.js"></script>
