--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <nav class="navbar">
               <div class="container">
                 <ul class="navbar-list">
-                  <li class="navbar-item"><a class="navbar-link" href="#intro">PC</a></li>
-                  <li class="navbar-item"><a class="navbar-link" href="#examples">Mac</a></li>
-                  <li class="navbar-item"><a class="navbar-link" href="#intro">Other</a></li>
+                  <li class="navbar-item"><a class="navbar-link" ng-click="setBrowser()">Pick for me</a></li>
+                  <li class="navbar-item"><a class="navbar-link" ng-click="setBrowser('windows')">PC</a></li>
+                  <li class="navbar-item"><a class="navbar-link" ng-click="setBrowser('mac')">Mac</a></li>
+                  <li class="navbar-item"><a class="navbar-link" ng-click="setBrowser('other')">Other</a></li>
                 </ul>
               </div>
             </nav>
